[package]
name = "franca"
version = "0.1.0"
edition = "2021"

[lib]
name = "libfranca"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "franca_bin"
path = "src/bin/main.rs"

[dependencies]
prettyplease = "0.2.15"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
wasm-bindgen = "0.2.87"
